[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
log = "*"
env_logger = "*"
chrono = "*"
reqwest = {version="*",features=["blocking"]}
serde_json = "*"
serde = {version="*", features=["derive"]}
tokio = "*"
thirtyfour = "*"